--- a/package.json
+++ b/package.json
@@ -15,24 +15,40 @@
     "update": "DIST=.next-tmp && git stash && git pull -f && yarn && DIST=$DIST yarn build && rm -rf .next && mv $DIST .next"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.19",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/mdx": "^2.0.7",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "lucide-react": "0.105.0-alpha.4",
+    "markdown-wasm": "^1.2.0",
     "next": "^13.4.8",
+    "next-contentlayer": "^0.3.4",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
+    "rehype-autolink-headings": "^7.0.0",
+    "rehype-pretty-code": "^0.10.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^3.0.1",
     "sharp": "^0.31.3",
+    "shiki": "^0.14.4",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.198",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
