--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "canvas": "^2.11.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "contentlayer": "^0.3.4",
@@ -32,6 +33,7 @@
     "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
+    "node-pre-gyp": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
