--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@mantine/hooks": "^6.0.20",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-direction": "^1.0.1",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
