--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,10 @@
         "name": "next"
       }
     ],
-    "strictNullChecks": true
+    "strictNullChecks": true,
+
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts",  ".contentlayer/generated"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+
 }
